[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
doorstop = "^2.1.4"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest-doorstop = "^1.0.0"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
